java/iot3mobility: make ETSI message validators compatible with Java 8
Fix: value.isBlank() (Java 11) → value.trim().isEmpty()

Signed-off-by: Mathieu LEFEBVRE <mathieu1.lefebvre@orange.com>