@@ -764,7 +764,7 @@ public final class CpmValidator211 {
     }
 
     private static String requireNotBlank(String field, String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new CpmValidationException("Missing mandatory field: " + field);
         }
         return value;
